--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,11 +12,26 @@
     tools:context="eu.pilotfish_demo_portal.p2o.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:id="@+id/counter"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="120sp"
-        android:gravity="center"
-        android:text="20" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/counter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="120sp"
+            android:gravity="center"
+            android:text="..." />
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="Waiting for a button press" />
+    </LinearLayout>
 </RelativeLayout>
